fix: changed global font size to prevent automatic zoom on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,7 +24,11 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
+input,
+button,
+textarea {
+  font-size: 16px;
+}
 * {
   box-sizing: border-box;
   padding: 0;
